--- a/style.css
+++ b/style.css
@@ -100,21 +100,74 @@ body {
     display: none;
 }
 
-.hero {
-    height: 120px;
-    width: 450px;
-    /* background-color: grey; */
-    position: relative;
-    position: relative;
-    left: 440px;
-    text-align: center;
-    color: white;
-    top: 60px;
-}
+.hero { 
+            height: 120px; 
+            width: 450px; 
+            position: relative; 
+            left: 440px; 
+            text-align: center; 
+            color: white; 
+            top: 130px; 
+            /* background-color: red; */
+        } 
+        
+        .hero h2 { 
+            font-size: 70px;
+            margin: 0;
+            line-height: 1.2;
+        }
 
-.hero h2 {
-    font-size: 70px;
-}
+        .animated-word {
+            display: inline-block;
+            position: relative;
+            min-width: 250px;
+        }
+
+        .word {
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 0px;
+            opacity: 0;
+            font-weight: 800;
+            transform: translateY(30px);
+            animation: wordRotate 9s infinite;
+        }
+
+        .word:nth-child(1) {
+            animation-delay: 0s;
+        }
+
+        .word:nth-child(2) {
+            animation-delay: 3s;
+        }
+
+        .word:nth-child(3) {
+            animation-delay: 6s;
+        }
+
+        @keyframes wordRotate {
+            0% {
+                opacity: 0;
+                transform: translateY(30px);
+            }
+            5% {
+                opacity: 1;
+                transform: translateY(0);
+            }
+            28% {
+                opacity: 1;
+                transform: translateY(0);
+            }
+            33% {
+                opacity: 0;
+                transform: translateY(-30px);
+            }
+            100% {
+                opacity: 0;
+                transform: translateY(-30px);
+            }
+        }
 
 .hero-text {
     height: 60px;
@@ -123,7 +176,7 @@ body {
     left: 360px;
     /* background-color: red; */
     text-align: center;
-    top: 100px;
+    top: 150px;
 }
 
 .hero-text p {
