--- a/mobileScreen.css
+++ b/mobileScreen.css
@@ -176,6 +176,7 @@
     /* background-color: grey; */
     position: relative;
     bottom: 180px;
+    overflow: hidden;
     /* height: 100px; */
 }
 
@@ -184,6 +185,7 @@
     /* background-color: red; */
     position: relative;
     left: 30px;
+    height: 60px;
     overflow: hidden;
     width: 300px;
 }
@@ -248,7 +250,7 @@
     position: relative;
     /* background-color: blue; */
     width: 300px;
-    top: 10px;
+    top: 70px;
     left: 10px;
     overflow: visible;
 }
