--- a/style.css
+++ b/style.css
@@ -346,7 +346,7 @@ body {
     /* background-color: grey; */
     position: relative;
     left: 40px;
-    top: 60px;
+    top: 100px;
 }
 
 
@@ -517,7 +517,7 @@ body {
 
 .demo-section {
     position: relative;
-    top: 820px;
+    top: 0px;
 }
 
 
@@ -526,7 +526,7 @@ body {
     width: 100%;
     /* background-color: red; */
     position: relative;
-    top: 800px;
+    top: -20px;
     justify-content: center;
     align-items: center;
     display: block;
@@ -572,10 +572,15 @@ body {
 
 .in-demo {
     /* background-color: red; */
-    width: 550px;
+    width: 640px;
     position: relative;
     top: 10px;
     left: 30px;
+}
+
+.mores{
+    position: relative;
+    top: 100px;
 }
 
 .in-demo h2 {
@@ -685,27 +690,36 @@ body {
 }
 
 
+.the-vedio video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+}
+
+
 .about-section {
     position: relative;
-    top: 1650px;
+    top: 840px;
 }
 
 
 .about-bar {
     position: relative;
-    top: 1500px;
+    top: 680px;
 }
 
 
 
 .the-youtube-center {
     position: relative;
-    top: 1500px;
+    top: 680px;
 }
 
 .the-youtube-text {
     position: relative;
-    top: 1500px;
+    top: 680px;
 }
 
 
@@ -714,7 +728,7 @@ body {
     width: 100%;
     /* background-color: red; */
     position: relative;
-    top: 1450px;
+    top: 630px;
 }
 
 
@@ -750,7 +764,7 @@ body {
 
 .FAQ {
     position: relative;
-    top: 1390px;
+    top: 570px;
 }
 
 
@@ -759,7 +773,7 @@ body {
     width: 100%;
     /* background-color: grey; */
     position: relative;
-    top: 1250px;
+    top: 430px;
 }
 
 .FAQs {
@@ -848,7 +862,7 @@ body {
     width: 100%;
     /* background-color: grey; */
     position: relative;
-    top: 1200px;
+    top:360px;
 }
 
 
