--- a/style.css
+++ b/style.css
@@ -1233,5 +1233,9 @@ body {
             width: 95%;
             overflow-x: hidden;
         }
+
+        .the-logo{
+            width: 200px;
+        }
     }
 }
