--- a/style.css
+++ b/style.css
@@ -1402,6 +1402,10 @@ body {
         justify-content: center;
     }
 
+
+    .hero-text{
+        overflow: hidden;
+    }
     .hero {
         width: 90%;
     }
