--- a/style.css
+++ b/style.css
@@ -1025,6 +1025,8 @@ body {
 
     .notebook{
         overflow: hidden;
+        height: 100px;
+        /* background-color: green; */
     }
 
     .main {
@@ -1215,9 +1217,9 @@ body {
     }
 
     .playstore{
-        height: 50px;width: 140px;
+        height: 50px;width: 120px;
         position: relative;
-        left: 115px !important;
+        left: 130px !important;
     }
 
     .demo-section {
