--- a/style.css
+++ b/style.css
@@ -962,6 +962,69 @@ body {
 }
 
 
+.png-circle{
+    height: 140px;
+    width: 140px;
+    border-radius: 50%;
+    position: relative;
+    top: -40px;
+    left: 60px;
+    overflow: hidden;
+
+    /* Blue-black soft shadow (light from left-bottom) */
+    box-shadow: 
+        8px -10px 22px rgba(10, 14, 27, 0.45),
+        3px -4px 10px rgba(0, 0, 0, 0.25);
+}
+
+
+
+.png-circle img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+
+.wing-text{
+    width: 200px;
+    height: 140px;
+    /* background-color: green; */
+    position: relative;
+    bottom: 35px;
+    left: 20px;
+    overflow: hidden;
+}
+
+
+.left-wing-cont{
+    height: 250px;
+    width: 300px;
+    background-color: rgb(245, 236, 236);
+    position: absolute;
+    right: 50px;
+    top: 280px;
+    border-radius: 15px;
+    overflow: hidden;
+}
+
+
+.left-wing-cont img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.wing-text h4{
+  font-size: 24px;  
+  position: relative;
+  bottom: 30px;
+}
+
+.wing-text span{
+    color: rgb(139, 182, 255);
+}
+
 .the-start{
     height:800px;
     width: 100%;
@@ -985,6 +1048,7 @@ body {
     /* background-color: green; */
     position: relative;
     top: 100px;
+    left: 25px;
     
 }
 
@@ -1067,8 +1131,8 @@ body {
     height: 130px;
     width: 350px;
     /* background-color: black; */
-    border-bottom: 1px solid rgb(227, 227, 227);
-    border-right: 1px solid rgb(227, 227, 227);
+    border-bottom: 1px solid rgb(175, 190, 248);
+    border-right: 1px solid rgb(175, 190, 248);
 
     border-bottom-right-radius: 12px;
 
@@ -1084,8 +1148,8 @@ body {
 .center-line{
     height: 40px;
     width: 380px;
-    border-top: 1px solid rgba(227, 227, 227);
-    border-left: 1px solid rgb(227, 227, 227);
+    border-top: 1px solid rgb(175, 190, 248);
+    border-left: 1px solid rgb(175, 190, 248);
 
     border-top-left-radius: 12px;
 
@@ -1104,8 +1168,8 @@ body {
     top: 50px;
     right: 320px;
 
-    border-bottom: 1px solid rgb(227, 227, 227);
-    border-right: 1px solid rgb(227, 227, 227);
+    border-bottom: 1px solid rgb(175, 190, 248);
+    border-right: 1px solid rgb(175, 190, 248);
 
     border-bottom-right-radius: 12px;
 
@@ -1118,8 +1182,8 @@ body {
     width: 280px;
 
 
-    border-top: 1px solid rgb(227, 227, 227);
-    border-left: 1px solid rgb(227, 227, 227);
+    border-top: 1px solid rgb(175, 190, 248);
+    border-left: 1px solid rgb(175, 190, 248);
 
     border-top-left-radius: 12px;
 
@@ -1135,7 +1199,7 @@ body {
 .start-point{
     height: 10px;
     width: 80px;
-    background-color: rgb(230, 228, 228);
+    background-color: rgba(47, 61, 129, 0.868);
     position: absolute;
     bottom: -5px;
     border-radius: 5px;
@@ -1144,7 +1208,7 @@ body {
 .end-point{
     height: 10px;
     width: 80px;
-    background-color: rgb(230, 228, 228);
+    background-color: rgba(47, 61, 129, 0.868);
     position: absolute;
     bottom: 16px;
     border-radius: 5px;
@@ -1166,7 +1230,7 @@ body {
     content: "";
     position: absolute;
     inset: 45%;
-    background: white;
+    background: rgb(73, 79, 250);
     border-radius: 50%;
     z-index: 3;
 }
@@ -1353,12 +1417,15 @@ body {
     }
 
     
+    .left-wing-cont{
+        display: none;
+    }
     
 
 
     .button-download{
         position: absolute;
-        bottom: -60px;
+        bottom: 200px;
     }
 
     .right-wing
